--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,6 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
 html {
-  font-family: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-  font-size: 16px;
+  font-size: 15px;
   word-spacing: 1px;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -8,7 +8,9 @@ html {
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
 }
-
+body {
+  font-family: 'Roboto Condensed', sans-serif!important;
+}
 *,
 *::before,
 *::after {
@@ -17,4 +19,14 @@ html {
 }
 a:hover {
   text-decoration: none;
+}
+.container-fluid, .container-sm, .container-md, .container-lg, .container-xl {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.btn-success {
+  background: #069255;
+}
+.table-bordered thead th {
+  border-bottom: none;
 }
