--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
 html {
   font-size: 15px;
   word-spacing: 1px;
@@ -27,6 +26,31 @@ a:hover {
 .btn-success {
   background: #069255;
 }
+.btn-success:hover {
+  background: #02bb6f;
+}
+.btn:focus {
+  box-shadow: none;
+}
 .table-bordered thead th {
   border-bottom: none;
+}
+
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #999;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
