--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -16,7 +16,11 @@ body {
   box-sizing: border-box;
   margin: 0;
 }
+a {
+  color: #069255;
+}
 a:hover {
+  color: #04b16f;;
   text-decoration: none;
 }
 .container-fluid, .container-sm, .container-md, .container-lg, .container-xl {
